# PicoFlora

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.h  main.c
.github/workflows/: build.yml
drivers/gpio_abstraction/: gpio_abstraction.c  gpio_abstraction.h
drivers/logging/: CMakeLists.txt  logging.c  logging.h
drivers/mcp23017/: CMakeLists.txt  mcp23017.c  mcp23017.h  mcp23017_class.c  mcp23017_class.h
drivers/stepper/: CMakeLists.txt  stepper.pio  stepper_driver.c  stepper_driver.h  stepper_mcp23017.c  stepper_mcp23017.h
libraries/: CMakeLists.txt
libraries/bsp/: CMakeLists.txt  bsp_battery.c  bsp_battery.h  bsp_cst328.c  bsp_cst328.h  bsp_dma_channel_irq.c  bsp_dma_channel_irq.h  bsp_i2c.c  bsp_i2c.h  bsp_i2s.c  bsp_i2s.h  bsp_i2s.pio  bsp_lcd_brightness.c  bsp_lcd_brightness.h  bsp_pcf85063.c  bsp_pcf85063.h  bsp_qmi8658.c  bsp_qmi8658.h  bsp_st7789.c  bsp_st7789.h
libraries/lvgl/: lv_conf.h
libraries/lvgl/env_support/cmake/: custom.cmake
libraries/lvgl/src/extra/libs/fsdrv/: lv_fs_fatfs.c
lvgl/: CMakeLists.txt
lvgl/factory/: CMakeLists.txt  factory.c
lvgl/factory/lvgl_ui/: i2stest8bit.h  lvgl_ui.c  lvgl_ui.h
lvgl/factory/lvgl_ui/tileview/: image_tile.c  qmi8658_tile.c  rgb_tile.c  system_tile.c
lvgl/lv_port/: lv_port.c  lv_port.h
lvgl/lvgl_brightness/: CMakeLists.txt  lvgl_brightness.c
lvgl/lvgl_example/: CMakeLists.txt  lvgl_example.c
lvgl/lvgl_image/: CMakeLists.txt  README.md  lvgl_image.c
lvgl/lvgl_qmi8658/: CMakeLists.txt  lvgl_qmi8658.c
lvgl/lvgl_screen/: CMakeLists.txt  lock_screen.c  lock_screen.h  main_screen.c  main_screen.h  screen_manager.c  screen_manager.h  stepper_screen.c  stepper_screen.h  time_settings_screen.c  time_settings_screen.h
mcp23017/: README.md  stepper_io_integration.c  stepper_io_integration.h
stepper/: CMakeLists.txt  stepper_driver.c  stepper_driver.h  stepper_pio.h
