
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lvgl_example)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lvgl_qmi8658)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lvgl_pcf85063)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lvgl_battery)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lvgl_brightness)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lvgl_image)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/factory)
# add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lvgl_sd_card)